--- a/flinkintegration/src/main/resources/codefeedr.properties
+++ b/flinkintegration/src/main/resources/codefeedr.properties
@@ -6,14 +6,14 @@
 
 # Kafka configuration, passed to kafka
 # The "kafka." is removed as prefix before sending to kafka
-kafka.bootstrap.servers=athens.ewi.tudelft.nl:9092
+kafka.bootstrap.servers=51.68.154.228:9092
 kafka.retries=1
 kafka.auto.offset.reset=earliest
 kafka.auto.commit.interval.ms=100
 kafka.auto.commit.enable=true
 
 #Zookeeper configuration
-zookeeper.connectionString=athens.ewi.tudelft.nl:2181
+zookeeper.connectionString=51.68.154.228:2181
 zookeeper.connectionTimeout=30
 zookeeper.sessionTimeout=30
 partitions=2
