--- a/experiments/Shared/kafka-docker/docker-compose-experiment.yml
+++ b/experiments/Shared/kafka-docker/docker-compose-experiment.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "51.68.154.228:9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: gangster.processfive.com
+      KAFKA_ADVERTISED_HOST_NAME: 51.68.154.228
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
