--- a/experiments/Shared/kafka-docker/docker-compose-experiment.yml
+++ b/experiments/Shared/kafka-docker/docker-compose-experiment.yml
@@ -11,7 +11,9 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 51.68.154.228
+      KAFKA_ADVERTISED_HOST_NAME: gangster.processfive.com
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    extra_hosts:
+      - "gangster.processfive.com:127.0.0.1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
