fixed issue in unit test

--- a/flinkintegration/src/main/resources/codefeedr.properties
+++ b/flinkintegration/src/main/resources/codefeedr.properties
@@ -9,8 +9,8 @@
 kafka.bootstrap.servers=gangster.processfive.com:9092
 kafka.retries=1
 kafka.auto.offset.reset=earliest
-kafka.auto.commit.interval.ms=100
-kafka.auto.commit.enable=true
+kafka.auto.commit.interval.ms=5
+kafka.auto.commit.enable=false
 
 #Zookeeper configuration
 zookeeper.connectionString=gangster.processfive.com:2181
