--- a/flinkintegration/src/main/resources/reference.conf
+++ b/flinkintegration/src/main/resources/reference.conf
@@ -10,17 +10,17 @@ codefeedr {
 
   kafka {
     server {
-      bootstrap.servers = "51.68.154.228:9092"
+      bootstrap.servers = "gangster.processfive.com:9092"
       retries = 0
     }
     consumer {
-      bootstrap.servers = "51.68.154.228:9092"
+      bootstrap.servers = "gangster.processfive.com:9092"
       auto.offset.reset = "earliest"
-      # auto.commit.interval.ms = 100
+      auto.commit.interval.ms = 5
       enable.auto.commit = false
     }
     producer {
-      bootstrap.servers = "51.68.154.228:9092"
+      bootstrap.servers = "gangster.processfive.com:9092"
       retries = 1
     }
     # Kafka configuration specific for codefeedrs kafka connectors
@@ -36,7 +36,7 @@ codefeedr {
     }
   }
   zookeeper {
-    connectionstring = "51.68.154.228"
+    connectionstring = "gangster.processfive.com"
     connectTimeout = 5
     sessionTimeout = 30
   }
