--- a/experiments/Shared/Flink/docker-compose.yml
+++ b/experiments/Shared/Flink/docker-compose.yml
@@ -46,7 +46,8 @@ services:
     volumes:
       - '/var/run/docker.sock:/tmp/docker.sock'
     environment:
-      ROUTE_URIS: logstash://172.16.45.114:5000
+        ROUTE_URIS: logstash://athens.ewi.tudelft.nl:5000
+      #ROUTE_URIS: logstash://172.16.45.114:5000
       LOGSTASH_TAGS: docker-elk
 
     restart: on-failure
