--- a/experiments/Shared/Elk/docker-compose.yml
+++ b/experiments/Shared/Elk/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       context: kibana/
     environment:
       - LOGSPOUT=ignore
+      - elasticsearch.hosts=http://elasticsearch:9250
     volumes:
       - ./kibana/config/:/usr/share/kibana/config:ro
     ports:
